<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.l0122147.salsarizki.myapplication.ui.home.StarredFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_starredFragment"
            app:destination="@id/starredFragment" />
        <action
            android:id="@+id/action_navigation_home_to_bookmarkFragment"
            app:destination="@id/bookmarkFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.l0122147.salsarizki.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.l0122147.salsarizki.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/starredFragment"
        android:name="com.l0122147.salsarizki.myapplication.ui.home.StarredFragment"
        android:label="fragment_starred"
        tools:layout="@layout/fragment_starred" />
    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.l0122147.salsarizki.myapplication.ui.home.BookmarkFragment"
        android:label="fragment_bookmark"
        tools:layout="@layout/fragment_bookmark" />
</navigation>