<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_card"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_gravity="center"
    app:cardCornerRadius="16dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background_color"
    android:backgroundTint="@color/superdark_green"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp">

        <ImageView
            android:id="@+id/rv_item_berita_img"
            android:layout_width="414dp"
            android:layout_height="56dp"
            android:background="@color/superdark_green"
            android:contentDescription="@string/name_info"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/background_cream" />


        <TextView
            android:id="@+id/rv_item_berita_title2"
            android:layout_width="201dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title_notes"
            android:textStyle="bold"

            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/rv_item_berita_title"
            android:layout_width="341dp"
            android:layout_height="29dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_berita_img"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/rv_item_berita_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_item_berita_title"
            android:layout_marginTop="6dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/noHp"
            android:textSize="12sp"
            android:scrollbars="vertical"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>